--- a/Meter_interface_poc.ipynb
+++ b/Meter_interface_poc.ipynb
@@ -9,13 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1019 16:59:20.114181 4355685824 module_wrapper.py:139] From /Users/pasquini/Desktop/G/InterpretablePPSM/inference_poc.py:60: The name tf.logging.set_verbosity is deprecated. Please use tf.compat.v1.logging.set_verbosity instead.\n",
+      "\n",
+      "W1019 16:59:20.114948 4355685824 module_wrapper.py:139] From /Users/pasquini/Desktop/G/InterpretablePPSM/inference_poc.py:60: The name tf.logging.ERROR is deprecated. Please use tf.compat.v1.logging.ERROR instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "from inference import Inference\n",
+    "from inference_poc import Inference\n",
     "from interface import plot\n",
     "\n",
     "model_path = 'MODELs/very_small/'\n",
