--- a/Meter_interface_poc.ipynb
+++ b/Meter_interface_poc.ipynb
@@ -30,7 +30,7 @@
     "from inference_poc import Inference\n",
     "from interface import plot\n",
     "\n",
-    "model_path = 'MODELs/very_small/'\n",
+    "model_path = 'PRETRAINED_MODELs/very_small/'\n",
     "\n",
     "S = Inference(model_path)\n",
     "S.sess = None"
